--- a/RanCyan/RanCyan.Android/RanCyan.Android.csproj
+++ b/RanCyan/RanCyan.Android/RanCyan.Android.csproj
@@ -58,12 +58,18 @@
     <PackageReference Include="Prism.DryIoc.Forms">
       <Version>7.1.0</Version>
     </PackageReference>
+    <PackageReference Include="ReactiveProperty">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.CardView" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
+    <PackageReference Include="Xamarin.Forms.BehaviorsPack">
+      <Version>2.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
