--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -5,8 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\Ranshika.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Images\Ranshika.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0" />
+    <PackageReference Include="ReactiveProperty" Version="5.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
+    <PackageReference Include="Xamarin.Forms.BehaviorsPack" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
