--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -5,10 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\MiniMikoRanCyan.png" />
     <None Remove="Images\Ranshika.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Images\MiniMikoRanCyan.png" />
     <EmbeddedResource Include="Images\Ranshika.png" />
   </ItemGroup>
 
