--- a/RanCyan/RanCyan.WPF/packages.config
+++ b/RanCyan/RanCyan.WPF/packages.config
@@ -10,12 +10,15 @@
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net47" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net47" />
-  <package id="System.Reactive" version="4.0.0" targetFramework="net47" />
+  <package id="System.Reactive" version="4.1.3" targetFramework="net47" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net47" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="WpfLightToolkit" version="1.0.1" targetFramework="net47" />
-  <package id="Xamarin.Forms" version="3.2.0.839982" targetFramework="net47" />
-  <package id="Xamarin.Forms.BehaviorsPack" version="2.0.0" targetFramework="net47" />
-  <package id="Xamarin.Forms.Platform.WPF" version="3.2.0.839982" targetFramework="net47" />
+  <package id="Xamarin.Forms" version="3.5.0.169047" targetFramework="net47" />
+  <package id="Xamarin.Forms.BehaviorsPack" version="2.1.0" targetFramework="net47" />
+  <package id="Xamarin.Forms.Platform.WPF" version="3.5.0.169047" targetFramework="net47" />
 </packages>
