--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\MiniKowashiyaRanCyan.png" />
     <None Remove="Images\MiniMikoRanCyan.png" />
     <None Remove="Images\Ranshika.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Images\MiniKowashiyaRanCyan.png" />
     <EmbeddedResource Include="Images\MiniMikoRanCyan.png" />
     <EmbeddedResource Include="Images\Ranshika.png" />
   </ItemGroup>
@@ -17,8 +19,17 @@
   <ItemGroup>
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0" />
     <PackageReference Include="ReactiveProperty" Version="5.2.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
-    <PackageReference Include="Xamarin.Forms.BehaviorsPack" Version="2.0.0" />
+    <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
+    <PackageReference Include="Xamarin.Forms.BehaviorsPack" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\RanShikaMainPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\RanShikaUWPPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
