--- a/RanCyan/RanCyan.Android/Properties/AndroidManifest.xml
+++ b/RanCyan/RanCyan.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appname">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="3" android:versionName="1.0.2.0" package="info.gunshi.RanCyan" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="RanCyan.Android" android:icon="@mipmap/ic_launcher"></application>
+	<application android:label="乱ちゃんProject" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
