--- a/RanCyan/RanCyan.UWP/RanCyan.UWP.csproj
+++ b/RanCyan/RanCyan.UWP/RanCyan.UWP.csproj
@@ -124,6 +124,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AiForms.CollectionView">
+      <Version>0.3.10-pre</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
     <PackageReference Include="Prism.DryIoc.Forms">
       <Version>7.1.0</Version>
