--- a/RanCyan/RanCyan.WPF/packages.config
+++ b/RanCyan/RanCyan.WPF/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AiForms.CollectionView" version="0.3.10-pre" targetFramework="net47" />
   <package id="DryIoc.dll" version="3.0.2" targetFramework="net47" />
   <package id="OpenTK" version="2.0.0" targetFramework="net47" />
   <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net47" />
