--- a/RanCyan/RanCyan.WPF/RanCyan.WPF.csproj
+++ b/RanCyan/RanCyan.WPF/RanCyan.WPF.csproj
@@ -140,6 +140,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CBannerCtrl_WPF.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
