--- a/RanCyan/RanCyan.Android/Properties/AndroidManifest.xml
+++ b/RanCyan/RanCyan.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="5" android:versionName="1.1.0.1" package="info.gunshi.RanCyan" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="6" android:versionName="1.1.1.0" package="info.gunshi.RanCyan" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="21" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<application android:label="乱ちゃんProject" android:icon="@mipmap/ic_launcher"></application>
