自由を追加

--- a/RanCyan/RanCyan.WPF/RanCyan.WPF.csproj
+++ b/RanCyan/RanCyan.WPF/RanCyan.WPF.csproj
@@ -17,10 +17,10 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <IsWebBootstrapper>true</IsWebBootstrapper>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Web</InstallFrom>
+    <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
@@ -28,7 +28,6 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>https://clickonceget.azurewebsites.net/app/乱ちゃんProject/</InstallUrl>
     <ProductName>乱ちゃんProject</ProductName>
     <PublisherName>放浪軍師</PublisherName>
     <ApplicationRevision>0</ApplicationRevision>
