--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -29,8 +29,10 @@
 
   <ItemGroup>
     <PackageReference Include="AiForms.CollectionView" Version="0.3.10-pre" />
+    <PackageReference Include="PCLStorage" Version="1.0.2" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0" />
     <PackageReference Include="ReactiveProperty" Version="5.2.0" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
     <PackageReference Include="Xamarin.Forms.BehaviorsPack" Version="2.1.0" />
   </ItemGroup>
