--- a/RanCyan/RanCyan.WPF/RanCyan.WPF.csproj
+++ b/RanCyan/RanCyan.WPF/RanCyan.WPF.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{23D6C230-F9A0-4089-A9E6-E42AB4E661A5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>RanCyan.WPF</RootNamespace>
-    <AssemblyName>乱ちゃんProject</AssemblyName>
+    <AssemblyName>RanCyanProject</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -17,10 +17,10 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <IsWebBootstrapper>true</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
+    <InstallFrom>Web</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
@@ -28,10 +28,11 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <InstallUrl>https://clickonceget.azurewebsites.net/app/RanCyanProject/</InstallUrl>
     <ProductName>乱ちゃんProject</ProductName>
     <PublisherName>放浪軍師</PublisherName>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.2.0.0</ApplicationVersion>
+    <ApplicationVersion>1.2.1.0</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -59,7 +60,7 @@
     <ApplicationIcon>minimikorancyan.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>A000DEFDA9F75BDCA7EAF30664AF8F9A0B31F6A4</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>485FCF5A15F010972C1F591A7C95E3D3AD511FBF</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestKeyFile>
