--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -54,7 +54,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\DiceMainPage.xaml">
+    <EmbeddedResource Update="Views\GenericRandomMainPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\GenericRandomUWPPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\RanShikaMainPage.xaml">
