--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\3D_Keirei.gif" />
+    <None Remove="Images\3D_Taiki1.gif" />
+    <None Remove="Images\3D_Taiki2.gif" />
+    <None Remove="Images\3D_Taiki5.gif" />
+    <None Remove="Images\3D_Taiki6.gif" />
+    <None Remove="Images\3D_Taiki8.gif" />
+    <None Remove="Images\3D_walk.gif" />
     <None Remove="Images\MainRanCyan.png" />
     <None Remove="Images\MiniKowashiyaRanCyan.png" />
     <None Remove="Images\MiniMikoRanCyan.png" />
@@ -19,6 +26,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Images\3D_Keirei.gif" />
+    <EmbeddedResource Include="Images\3D_Taiki1.gif" />
+    <EmbeddedResource Include="Images\3D_Taiki2.gif" />
+    <EmbeddedResource Include="Images\3D_Taiki5.gif" />
+    <EmbeddedResource Include="Images\3D_Taiki6.gif" />
+    <EmbeddedResource Include="Images\3D_Taiki8.gif" />
+    <EmbeddedResource Include="Images\3D_walk.gif" />
     <EmbeddedResource Include="Images\MainRanCyan.png" />
     <EmbeddedResource Include="Images\MiniKowashiyaRanCyan.png" />
     <EmbeddedResource Include="Images\MiniMikoRanCyan.png" />
