FFImageLoadingの適用。Destroyにウェイト。

--- a/RanCyan/RanCyan.WPF/packages.config
+++ b/RanCyan/RanCyan.WPF/packages.config
@@ -27,7 +27,9 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="WpfLightToolkit" version="1.0.1" targetFramework="net47" />
-  <package id="Xamarin.Forms" version="3.5.0.169047" targetFramework="net47" />
+  <package id="Xamarin.FFImageLoading" version="2.4.10.972" targetFramework="net47" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.4.10.972" targetFramework="net47" />
+  <package id="Xamarin.Forms" version="4.1.0.673156" targetFramework="net47" />
   <package id="Xamarin.Forms.BehaviorsPack" version="2.1.0" targetFramework="net47" />
   <package id="Xamarin.Forms.Platform.WPF" version="3.5.0.169047" targetFramework="net47" />
 </packages>
