--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -45,7 +45,9 @@
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.1.0" />
     <PackageReference Include="ReactiveProperty" Version="5.2.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
-    <PackageReference Include="Xamarin.Forms" Version="3.5.0.169047" />
+    <PackageReference Include="Xamarin.FFImageLoading" Version="2.4.10.972" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.10.972" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.673156" />
     <PackageReference Include="Xamarin.Forms.BehaviorsPack" Version="2.1.0" />
   </ItemGroup>
 
