--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -67,6 +67,9 @@
     <Compile Update="Views\LotteryCategorySelectionView.xaml.cs">
       <DependentUpon>LotteryCategorySelectionView.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\LotteryMobilePage.xaml.cs">
+      <DependentUpon>LotteryMobilePage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -86,12 +89,16 @@
     <EmbeddedResource Update="Views\LotteryConfigPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\LotteryTabletPage.xaml">
+    <EmbeddedResource Update="Views\LotteryMobilePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\LotteryUwpPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
