LotteryConfigCategorySettingViewのViewとViewModelのファイル追加

--- a/RanCyan/RanCyan/RanCyan.csproj
+++ b/RanCyan/RanCyan/RanCyan.csproj
@@ -78,6 +78,9 @@
     <EmbeddedResource Update="Views\LotteryCategorySelectionView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LotteryConfigCategorySettingView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LotteryConfigPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
